# ComputationalMath

./: CMakeLists.txt
src/: CMakeLists.txt  Chebyshev.h  Derivative.h  Integrate.h  Interpolation.h  NonLinearMPI.h  Spline.h  Utility.h
tasks/: 2023_kr.cpp  CMakeLists.txt  task12.8.cpp  task2Gauss.txt  task2Simpson.txt  task2Trapecia.txt  task9.32.cpp  task_1.cpp  task_2.cpp  test_chebyshev.cpp  test_derivative.cpp  test_interpolation.cpp  test_spline.cpp
